--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@heroicons/vue": "^2.2.0",
     "@supabase/supabase-js": "^2.49.4",
     "@vue-hero-icons/outline": "^1.7.2",
+    "lodash-es": "^4.17.21",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-toast-notification": "^3.1.3"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
