--- a/package.json
+++ b/package.json
@@ -13,9 +13,22 @@
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/extension-color": "^2.12.0",
+    "@tiptap/extension-highlight": "^2.12.0",
+    "@tiptap/extension-link": "^2.12.0",
+    "@tiptap/extension-placeholder": "^2.12.0",
+    "@tiptap/extension-task-item": "^2.12.0",
+    "@tiptap/extension-task-list": "^2.12.0",
+    "@tiptap/extension-text-style": "^2.12.0",
+    "@tiptap/extension-underline": "^2.12.0",
+    "@tiptap/pm": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
+    "@tiptap/vue-3": "^2.12.0",
     "@vue-hero-icons/outline": "^1.7.2",
     "lodash-es": "^4.17.21",
     "pinia": "^3.0.1",
+    "quill": "^2.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue-toast-notification": "^3.1.3"
