--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/pm": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
     "@tiptap/vue-3": "^2.12.0",
+    "@vercel/analytics": "^1.5.0",
     "@vue-hero-icons/outline": "^1.7.2",
     "lodash-es": "^4.17.21",
     "pinia": "^3.0.1",
